--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <body>
         <nav></nav>
             <ul>
-                    <li><a href="Home.html" >Home</a></li>
+                    <li><a href="index.html" >index</a></li>
                     <li><a href="content.html" >Content</a></li>
                     <li><a href="feedback.html" >Feedback</a></li>
                     <li><a href="contact.html" >Contact</a></li>
