--- a/content.html
+++ b/content.html
@@ -28,7 +28,7 @@
             <nav>
                    
                             <ul>
-                                    <li><a href="Home.html" >Home</a></li>
+                                    <li><a href="index.html" >index</a></li>
                                     <li><a href="content.html" >Content</a></li>
                                     <li><a href="feedback.html" >Feedback</a></li>
                                     <li><a href="contact.html" >Contact</a></li>
