change to white background

--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
             
             <style>
                 body {
-                        background-color: rgba(170, 170, 170, 0.979);
+                         background-color: white;
                  } </style>
              
             <br>
