--- a/content.html
+++ b/content.html
@@ -20,7 +20,7 @@
             <style>
             
                 body {
-                        background-color: rgba(170, 170, 170, 0.979);
+                         background-color: white;
                  } </style>
                  <br> <br> <br> <br> 
             <h1 style="color: rgb(0, 91, 175);">  The World Of Science 
