--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,7 @@
                     <hr> </h1>
                    <style>
                     body {
-                        background-color: rgba(170, 170, 170, 0.979);
+                         background-color: white;
                  } </style>
 </body>
 </html>
